add env requirments

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/assets
 t Byte-compiled / optimized / DLL files
 deps.txt
 archive
@@ -102,4 +103,4 @@ ENV/
 .idea
 
 # checkpoint
-checkpoint
+# checkpoint
